chatwoot-terraform/kubernetes-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chatwoot
  labels:
    name: chatwoot
    app.kubernetes.io/name: chatwoot
    app.kubernetes.io/part-of: chatwoot-platform
